--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
                             </div>
                             <div class="info">
                                 <h2>
-                                    Sunny Luthra
+                                    David Johnston
                                 </h2>
                                 <h4>
-                                    Animator / Photographer
+                                    Game Programmer
                                 </h4>
                                 <p>
-                                    We are mRova, a Pune-based software development company. We love to develop Websites, Desktop Softwares and Mobile Applications.
+                                    Hi! I'm a student game programmer currently attending Champlain College. I love Math, Literature, Videogames, and Prince.
                                 </p>
                             </div>
                         </div>
