--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
         <header id="header">
             <div id="logo">
                 <h2>
-                    Sunny Luthra
+                    David Johnston
                 </h2>
                 <h4>
-                    Animator / Photographer
+                    Game Programmer
                 </h4>
             </div>
         </header>
