--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                     Game Programmer
                                 </h4>
                                 <p>
-                                    Hi! I'm a student game programmer currently attending Champlain College. I love Math, Literature, Videogames, and Prince.
+                                    Hi! I'm a student game programmer currently attending Champlain College. I love Math, Literature, Nuts4Nuts, writing implements and Prince. I get excited about tiny things.
                                 </p>
                             </div>
                         </div>
@@ -109,7 +109,7 @@
                             <div class="item-box clearfix">
                               <i class="icon-envelope"></i>
                               <div class="item-data">
-                                <h3><a href="mailto:sunny@mrova.com">sunny@mrova.com</a></h3>
+                                <h3><a href="mailto:dvdjoh@gmail.com">dvdjoh@gmail.com</a></h3>
                                 <p>Email Address</p>
                               </div>
                             </div>
@@ -118,7 +118,7 @@
                             <div class="item-box clearfix">
                               <i class="icon-facebook"></i>
                               <div class="item-data">
-                                <h3><a href="http://fb.me/luthra.sunny">luthra.sunny</a></h3>
+                                <h3><a href="http://fb.me/david.johnston.14268769">david.johnston</a></h3>
                                 <p>Facebook Profile</p>
                               </div>
                             </div>
@@ -127,7 +127,7 @@
                             <div class="item-box clearfix">
                               <i class="icon-twitter"></i>
                               <div class="item-data">
-                                <h3><a href="http://twitter.com/mRovaSolutions">@mRovaSolutions</a></h3>
+                                <h3><a href="http://twitter.com/nuts4nuts4nuts">@nuts4nuts4nuts</a></h3>
                                 <p>Twitter Handle</p>
                               </div>
                             </div>
@@ -379,7 +379,7 @@
         <!-- End Tab Container -->
         <footer>
             <p>
-                Designed with lots of love at <a href="http://www.mrova.com" title="Pune web designing company">mRova</a>. Just <a href="http://www.mrova.com/free-one-page-responsive-html-resume-template/">Click me to download</a> this template for free :).
+                David Karr Johnston / (917) 922-0978 / dvdjoh@gmail.com
             </p>
         </footer>
     </div><!-- #main -->
