--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <section class="clearfix">
                         <div class="g2">
                             <div class="photo">
-                                <img src="https://fbcdn-sphotos-e-a.akamaihd.net/hphotos-ak-frc1/582546_344156198979857_678123957_n.jpg" alt="David Karr Johnston">
+                                <img src="http://i.imgur.com/ZS58Iab.jpg" alt="David Karr Johnston">
                             </div>
                             <div class="info">
                                 <h2>
