--- a/index.html
+++ b/index.html
@@ -146,34 +146,34 @@
                             <ul class="no-list work">
                                 <li>
                                     <h5>
-                                        Freelance Web Designer
-                                    </h5><span class="label label-info">2009-2010</span>
+                                        Study-Abroad Blogger
+                                    </h5><span class="label label-success">Jan 2015-April 2015</span>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
+                                        Writing for Champlain College's study-abroad blog about my time in Montreal, visiting game studios, attempting to learn French, and exploring the city.
                                     </p>
                                 </li>
                                 <li>
                                     <h5>
-                                        Python Programmer
-                                    </h5><span class="label label-info">2010-2011</span>
+                                        Programming Tutor
+                                    </h5><span class="label label-info">Sept 2013-April 2014</span>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
+                                        Tutored students in C++ for the Introduction to Programming, Advanced Programming and Data Structures and Algorithms classes at Champlain College.
                                     </p>
                                 </li>
                                 <li>
                                     <h5>
-                                        Social Media Lunatic
-                                    </h5><span class="label label-info">2011-2012</span>
+                                        Hiring Committee Member
+                                    </h5><span class="label label-info">Anually, Spring 2009-2012</span>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
+                                        Served on the committee which is tasked with making hiring decisions at the Brooklyn Free School. Evaluated resumes, interviewed candidates, and participated in the selection process.
                                     </p>
                                 </li>
                                 <li>
                                     <h5>
-                                        Being Awesome
-                                    </h5><span class="label label-danger">2012-Till Death</span>
+                                        Governance  Committee Member
+                                    </h5><span class="label label-info">Sept 2011-June 2012</span>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
+                                        Served on this newly formed subcommittee of the Board of Trustees, which was charged with reviewing and revising the function of the Board of Trustees and the manner in which the school is governed.
                                     </p>
                                 </li>
                             </ul>
@@ -184,17 +184,14 @@
                                 <li>
                                     <h5>
                                         NoUse School
-                                    </h5><span class="label label-success">2001-2002</span>
+                                    </h5><span class="label label-success">2012-2016</span>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
-                                    </p>
-                                </li>
-                                <li>
-                                    <h5>
-                                        Super Useless College
-                                    </h5><span class="label label-warning">2002-2008</span>
-                                    <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
+                                        Currently working towards a bachelor's of science in game programming. Minoring in Mathematics.
+GPA: 3.734
+President's List, one semester, Dean's list three semesters
+Trustee Scholar
+Inspiration Scholar
+Recipient of the Mt. Mansfield TV Award
                                     </p>
                                 </li>
                             </ul>
@@ -208,27 +205,14 @@
                                     Software
                                 </h5>
                                 <div class="meter emerald">
-                                    <span style="width: 33.3%"><span>Photoshop</span></span>
+                                    <span style="width: 85%"><span>Visual Studio</span></span>
                                 </div>
                                 <div class="meter carrot">
-                                    <span style="width: 90%"><span>Illustrator</span></span>
+                                    <span style="width: 66.6%"><span>Unity</span></span>
                                 </div>
                                 <div class="meter wisteria">
-                                    <span style="width: 60%"><span>InDesign</span></span>
+                                    <span style="width: 65%"><span>Git/SVN</span></span>
                                 </div>
-                                <div class="meter sunflower">
-                                    <span style="width: 40%"><span>Firework</span></span>
-                                </div>
-                                <div class="meter midnight">
-                                    <span style="width: 70%"><span>Dreamweaver</span></span>
-                                </div>
-                                <div class="meter pomengrate">
-                                    <span style="width: 60%"><span>Microsoft Office</span></span>
-                                </div>
-                                <div class="meter asbestos">
-                                    <span style="width: 65%"><span>Linux</span></span>
-                                </div>
-                                <div class="break"></div>
                                 <h5>
                                     Design
                                 </h5>
@@ -243,22 +227,22 @@
                                 </div>
                                 <div class="break"></div>
                                 <h5>
-                                    Programming Language
+                                    Programming Languages
                                 </h5>
                                 <div class="meter emerald">
-                                    <span style="width: 53.3%"><span>HTML/CSS</span></span>
+                                    <span style="width: 90%"><span>C/C++</span></span>
                                 </div>
                                 <div class="meter carrot">
-                                    <span style="width: 80%"><span>PHP/MySql</span></span>
+                                    <span style="width: 80%"><span>C#</span></span>
                                 </div>
                                 <div class="meter wisteria">
-                                    <span style="width: 95%"><span>jQuery/JavaScript</span></span>
+                                    <span style="width: 75%"><span>Java</span></span>
                                 </div>
                                 <div class="meter sunflower">
-                                    <span style="width: 75%"><span>Ruby</span></span>
+                                    <span style="width: 80%"><span>Action Script 3</span></span>
                                 </div>
                                 <div class="meter asbestos">
-                                    <span style="width: 82%"><span>Python</span></span>
+                                    <span style="width: 60%"><span>HLSL</span></span>
                                 </div>
                             </div>
                         </div>
