--- a/index.html
+++ b/index.html
@@ -183,14 +183,14 @@
                             <ul class="no-list work">
                                 <li>
                                     <h5>
-                                        NoUse School
+                                        Champlain College
                                     </h5><span class="label label-success">2012-2016</span>
                                     <p>
-                                        Currently working towards a bachelor's of science in game programming. Minoring in Mathematics.
-GPA: 3.734
-President's List, one semester, Dean's list three semesters
-Trustee Scholar
-Inspiration Scholar
+                                        Currently working towards a bachelor's of science in game programming. Minoring in Mathematics.<br>
+GPA: 3.734<br>
+President's List, one semester, Dean's list three semesters<br>
+Trustee Scholar<br>
+Inspiration Scholar<br>
 Recipient of the Mt. Mansfield TV Award
                                     </p>
                                 </li>
