updated resume, about, and contact a bit

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                     Game Programmer
                                 </h4>
                                 <p>
-                                    Hi! I'm a student game programmer currently attending Champlain College. I love Math, Literature, Nuts4Nuts, writing implements and Prince. I get excited about tiny things.
+                                    Hi! I'm a student game programmer currently attending Champlain College. I am particularly interested in graphics programming, but I have passion for many parts of the software development process. I love Math, Literature, Nuts4Nuts, writing implements and Prince. I get excited about tiny things.
                                 </p>
                             </div>
                         </div>
@@ -140,8 +140,67 @@
                 <div id="resume">
                     <section class="clearfix">
                         <div class="g2">
+                        <h3>
+                                Education
+                            </h3>
+                            <ul class="no-list work">
+                                <li>
+                                    <h5>
+                                        Champlain College
+                                    </h5><span class="label label-success">2012-2016</span>
+                                    <p>
+                                        Currently working towards a bachelor's of science in game programming.<br>
+                                        Minoring in Mathematics.<br>
+                                        GPA: 3.734<br>
+                                        President's List, one semester, Dean's list three semesters<br>
+                                        Trustee Scholar<br>
+                                        Inspiration Scholar<br>
+                                        Recipient of the Mt. Mansfield TV Award
+                                    </p>
+                                </li>
+                            </ul>
                             <h3>
-                                Work Experience
+                                Projects
+                            </h3>
+                            <ul class="no-list work">
+                                <li>
+                                    <h5>
+                                        Rigid Motors
+                                    </h5>
+                                    <p>
+Worked with a designer, producer, and artist over four weeks to make an mobile puzzle-platformer in Flash.<br>
+This project taught me a lot about thinking about platform. In targeting mobile devices, I worked with the designer to design controls and levels that feel good, and with the artist to get around the graphical limitations of the platform.                                    </p>
+                                </li>
+                                <li>
+                                    <h5>
+                                        Apriori Algorithm
+                                    </h5>
+                                    <p>
+                                        Worked with two other programmers to develop an implementation of the apriori algorithm for large data sets. Focused on optimizing for time at the cost of memory.<br>
+This project taught me an incredibly valuable lesson: always communicate. We were expected to work on the project over spring break, but as soon as I got home my computer died. I was focused on getting it back in working order, and forgot to communicate my dilemma to my teammates. Two days later, I got my computer running and told the team what happened, but the time was still gone. The project got finished; it just took some extra stress and train-programming. From then on I’ve made sure to inform the team I am working with at the first sign of any sizable problem.
+                                    </p>
+                                </li>
+                                <li>
+                                    <h5>
+                                        Batgai-0
+                                    </h5>
+                                    <p>
+                                        Worked alone on an arena shoot ‘em up for PC and Xbox 360.<br>
+Implemented many techniques of 2d graphics programming, including parallax scrolling, a particle system, and pixel shaders in HLSL.
+                                    </p>
+                                </li>
+                                <li>
+                                    <h5>
+                                        MOMA Teens One Button Arcade
+                                    </h5><span class="label label-info">Sept 2011-June 2012</span>
+                                    <p>
+                                        Worked with a team to create an arcade cabinet for a one button game (Gamme IV, by Cactus).<br>
+                                        This was the first project that really made me think about controls and presentation when it comes to videogames. We already knew what kind of game we were working with, but we had to create an arcade cabinet that would both mesh well with the existing systems of the game as well as atract people to play. It was a lot of fun getting to create a unique presentation for a game, and showing our work at the Museum of Modern Art, in New York.
+                                    </p>
+                                </li>
+                            </ul>
+                            <h3>
+                                Work
                             </h3>
                             <ul class="no-list work">
                                 <li>
@@ -174,24 +233,6 @@
                                     </h5><span class="label label-info">Sept 2011-June 2012</span>
                                     <p>
                                         Served on this newly formed subcommittee of the Board of Trustees, which was charged with reviewing and revising the function of the Board of Trustees and the manner in which the school is governed.
-                                    </p>
-                                </li>
-                            </ul>
-                            <h3>
-                                Education
-                            </h3>
-                            <ul class="no-list work">
-                                <li>
-                                    <h5>
-                                        Champlain College
-                                    </h5><span class="label label-success">2012-2016</span>
-                                    <p>
-                                        Currently working towards a bachelor's of science in game programming. Minoring in Mathematics.<br>
-GPA: 3.734<br>
-President's List, one semester, Dean's list three semesters<br>
-Trustee Scholar<br>
-Inspiration Scholar<br>
-Recipient of the Mt. Mansfield TV Award
                                     </p>
                                 </li>
                             </ul>
@@ -337,8 +378,8 @@ Recipient of the Mt. Mansfield TV Award
                               <i class="icon-phone"></i>
                             </div>
                             <div class="sny-icon-content">
-                              <h4>Mobile Number</h4>
-                              <p>999-9999-999<br/>999-1112-999</p>
+                              <h4>Email</h4>
+                              <p>dvdjoh@gmail.com<br>david@dkj.io</p>
                             </div>
                          </div>
                        </div>
@@ -348,8 +389,8 @@ Recipient of the Mt. Mansfield TV Award
                               <i class="icon-user"></i>
                             </div>
                             <div class="sny-icon-content">
-                              <h4>About Me</h4>
-                              <p>I love to work, so don't be shy, i am just an email away.</p>
+                              <h4>What's up?</h4>
+                              <p>I love interesting ideas, so if you've got one don't be shy to email me.</p>
                             </div>
                          </div>
                        </div>
