--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                                         Champlain College
                                     </h5><span class="label label-success">2012-2016</span>
                                     <p>
-                                        Currently working towards a bachelor's of science in game programming.<br>
+                                        Currently working towards B.S. in game programming.<br>
                                         Minoring in Mathematics.<br>
                                         GPA: 3.734<br>
                                         President's List, one semester, Dean's list three semesters<br>
@@ -168,8 +168,8 @@
                                         Rigid Motors
                                     </h5>
                                     <p>
-&nbsp; &nbsp; &nbsp; &nbsp;Worked with a designer, producer, and artist over four weeks to make an mobile puzzle-platformer in Flash.<br>
-&nbsp; &nbsp; &nbsp; &nbsp;This project taught me a lot about thinking about platform. In targeting mobile devices, I worked with the designer to design controls and levels that feel good, and with the artist to get around the graphical limitations of the platform.
+				    Worked with a designer, producer, and artist over four weeks to make an mobile puzzle-platformer in Flash.<br><br>
+This project taught me a lot about thinking about platform. In targeting mobile devices, I worked with the designer to design controls and levels that feel good, and with the artist to get around the graphical limitations of the platform.
                                    </p>
                                 </li>
                                 <li>
@@ -177,8 +177,8 @@
                                         Apriori Algorithm
                                     </h5>
                                     <p>
-                                        &nbsp; &nbsp; &nbsp; &nbsp;Worked with two other programmers to develop an implementation of the apriori algorithm for large data sets. Focused on optimizing for time at the cost of memory.<br>
-&nbsp; &nbsp; &nbsp; &nbsp;This project taught me an incredibly valuable lesson: always communicate. We were expected to work on the project over spring break, but as soon as I got home my computer died. I was focused on getting it back in working order, and forgot to communicate my dilemma to my teammates. Two days later, I got my computer running and told the team what happened, but the time was still gone. The project got finished; it just took some extra stress and train-programming. From then on I’ve made sure to inform the team I am working with at the first sign of any sizable problem.
+				    Worked with two other programmers to develop an implementation of the apriori algorithm for large data sets. Focused on optimizing for time at the cost of memory.<br><br>
+This project taught me an incredibly valuable lesson: always communicate. We were expected to work on the project over spring break, but as soon as I got home my computer died. I was focused on getting it back in working order, and forgot to communicate my dilemma to my teammates. Two days later, I got my computer running and told the team what happened, but the time was still gone. The project got finished; it just took some extra stress and train-programming. From then on I’ve made sure to inform the team I am working with at the first sign of any sizable problem.
                                     </p>
                                 </li>
                                 <li>
@@ -186,8 +186,8 @@
                                         Batgai-0
                                     </h5>
                                     <p>
-                                        &nbsp; &nbsp; &nbsp; &nbsp;Worked alone on an arena shoot ‘em up for PC and Xbox 360.<br>
-&nbsp; &nbsp; &nbsp; &nbsp;Implemented many techniques of 2d graphics programming, including parallax scrolling, a particle system, and pixel shaders in HLSL.
+				    Worked alone on an arena shoot ‘em up for PC and Xbox 360.<br><br>
+Implemented many techniques of 2d graphics programming, including parallax scrolling, a particle system, and pixel shaders in HLSL.
                                     </p>
                                 </li>
                                 <li>
@@ -195,8 +195,8 @@
                                         MOMA Teens One Button Arcade
                                     </h5>
                                     <p>
-                                        &nbsp; &nbsp; &nbsp; &nbsp;Worked with a team to create an arcade cabinet for a one button game (Gamme IV, by Cactus).<br>
-                                        &nbsp; &nbsp; &nbsp; &nbsp;This was the first project that really made me think about controls and presentation when it comes to videogames. We already knew what kind of game we were working with, but we had to create an arcade cabinet that would both mesh well with the existing systems of the game as well as atract people to play. It was a lot of fun getting to create a unique presentation for a game, and showing our work at the Museum of Modern Art, in New York.
+				    Worked with a team to create an arcade cabinet for a one button game (Gamme IV, by Cactus).<br><br>
+                                    This was the first project that really made me think about controls and presentation when it comes to videogames. We already knew what kind of game we were working with, but we had to create an arcade cabinet that would both mesh well with the existing systems of the game as well as atract people to play. It was a lot of fun getting to create a unique presentation for a game, and showing our work at the Museum of Modern Art, in New York.
                                     </p>
                                 </li>
                             </ul>
@@ -368,8 +368,8 @@
                               <i class="icon-globe"></i>
                             </div>
                             <div class="sny-icon-content">
-                              <h4>My Address</h4>
-                              <p>Some Apartment 405 in a jungle nearby a restaurant</p>
+                              <h4>Where am I?</h4>
+                              <p>Right now I'm in Montreal, Canada!</p>
                             </div>
                          </div>
                        </div>
