--- a/index.html
+++ b/index.html
@@ -85,24 +85,6 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="g1">
-                            <div class="main-links sidebar">
-                                <ul>
-                                    <li>
-                                        <a href="#resume">View My Resume</a>
-                                    </li>
-                                    <li>
-                                        <a href="#portfolio">My Portfolio</a>
-                                    </li>
-                                    <li>
-                                        <a href="#contact">Hire me for your next project</a>
-                                    </li>
-                                    <li>
-                                        <a href="#features">Features</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
                         <div class="break"></div>
                         <div class="contact-info">
                           <div class="g1">
@@ -244,7 +226,7 @@ Implemented many techniques of 2d graphics programming, including parallax scrol
                                     Skills
                                 </h3>
                                 <h5>
-                                    Software
+                                    Tech
                                 </h5>
                                 <div class="meter emerald">
                                     <span style="width: 85%"><span>Visual Studio</span></span>
@@ -255,17 +237,8 @@ Implemented many techniques of 2d graphics programming, including parallax scrol
                                 <div class="meter wisteria">
                                     <span style="width: 65%"><span>Git/SVN</span></span>
                                 </div>
-                                <h5>
-                                    Design
-                                </h5>
-                                <div class="meter emerald">
-                                    <span style="width: 33.3%"><span>User Interface</span></span>
-                                </div>
-                                <div class="meter carrot">
-                                    <span style="width: 90%"><span>Typography</span></span>
-                                </div>
-                                <div class="meter wisteria">
-                                    <span style="width: 60%"><span>Web Applications</span></span>
+                                <div class="meter sunflower">
+                                    <span style="width: 80%"><span>VIM</span></span>
                                 </div>
                                 <div class="break"></div>
                                 <h5>
@@ -379,8 +352,8 @@ Implemented many techniques of 2d graphics programming, including parallax scrol
                               <i class="icon-phone"></i>
                             </div>
                             <div class="sny-icon-content">
-                              <h4>Email</h4>
-                              <p>dvdjoh@gmail.com<br>david@dkj.io</p>
+                              <h4>Reaching me</h4>
+                              <p>(917) 922-0978<br>dvdjoh@gmail.com</p>
                             </div>
                          </div>
                        </div>
