--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                                     </h5>
                                     <p>
 				    Worked alone on an arena shoot ‘em up for PC and Xbox 360.<br><br>
-Implemented many techniques of 2d graphics programming, including parallax scrolling, a particle system, and pixel shaders in HLSL.
+Implemented many techniques of 2d graphics programming, including parallax scrolling, a particle system, and pixel shaders in HLSL. This project gave me my first taste of the fun of graphics programming. Though the techniques implemented are very simple, it gave me a taste of the joy of turning math into beauty. There are many facets to creating a great game, but the one which strikes us most immediately and frequently is the visual aesthetic. This project made me realize that graphics programming beautifully combines two of my favorite things: math and art.
                                     </p>
                                 </li>
                                 <li>
@@ -364,7 +364,7 @@ Implemented many techniques of 2d graphics programming, including parallax scrol
                             </div>
                             <div class="sny-icon-content">
                               <h4>What's up?</h4>
-                              <p>I love interesting ideas, so if you've got one don't be shy to email me.</p>
+                              <p>I'm always looking for cool things to do. Don't be shy about emailing me.</p>
                             </div>
                          </div>
                        </div>
