added new icons and gitignore

--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
   <title>David Johnston - Videogames</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
-  <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
-  <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-72x72-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-114x114-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-144x144-precomposed.png">
+  <link rel='shortcut icon' type='image/png' href='favicon.png' />
+  <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
   <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 
   <link rel="stylesheet" href="css/normalize.min.css">
@@ -168,8 +173,8 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                                         Batgai-0
                                     </h5>
                                     <p>
-				    Worked alone on an arena shoot ‘em up for PC and Xbox 360.<br><br>
-Implemented many techniques of 2d graphics programming, including parallax scrolling, a particle system, and pixel shaders in HLSL. This project gave me my first taste of the fun of graphics programming. Though the techniques implemented are very simple, it gave me a taste of the joy of turning math into beauty. There are many facets to creating a great game, but the one which strikes us most immediately and frequently is the visual aesthetic. This project made me realize that graphics programming beautifully combines two of my favorite things: math and art.
+				    Worked alone on an arena shoot ‘em up for PC and Xbox 360. Implemented many techniques of 2d graphics programming, including parallax scrolling, a particle system, and pixel shaders in HLSL.<br><br>
+				    This project gave me my first taste of the fun of graphics programming. Though the techniques implemented are very simple, it gave me a taste of the joy of turning math into beauty. There are many facets to creating a great game, but the one which strikes us most immediately and frequently is the visual aesthetic. This project made me realize that graphics programming beautifully combines two of my favorite things: math and art.
                                     </p>
                                 </li>
                                 <li>
