fixed degree link

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                                         Champlain College
                                     </h5><span class="label label-success">2012-2016</span>
                                     <p>
-                                        Currently working towards a <a href="http://twitter.com/nuts4nuts4nuts">BS in Game Programming</a>.<br>
+                                        Currently working towards a <a href="http://www.champlain.edu/academics/undergraduate-academics/majors-and-specializations/game-programming">BS in Game Programming</a>.<br>
                                         Minoring in Mathematics.<br>
                                         GPA: 3.734<br>
                                         President's List, one semester, Dean's list three semesters<br>
