changed gamme to gamma

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                                         MOMA Teens One Button Arcade
                                     </h5>
                                     <p>
-				    Worked with a team to create an arcade cabinet for a one button game (Gamme IV, by Cactus).<br><br>
+				    Worked with a team to create an arcade cabinet for a one button game (Gamma IV, by Cactus).<br><br>
                                     This was the first project that really made me think about controls and presentation when it comes to videogames. We already knew what kind of game we were working with, but we had to create an arcade cabinet that would both mesh well with the existing systems of the game as well as atract people to play. It was a lot of fun getting to create a unique presentation for a game, and showing our work at the Museum of Modern Art, in New York.
                                     </p>
                                 </li>
