Changed rigidmotors link

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                                 <img src="http://i.imgur.com/qT3R7ij.png" alt="">
                                 <div class="image-overlay">
                                     <div class="image-link">
-                                        <a href="http://lorempixel.com/606/606/sports/1" class="btn">Full View</a>
+                                        <a href="http://i.imgur.com/qT3R7ij.png" class="btn">Expand</a>
                                     </div>
                                 </div>
                             </div>
