--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
                 <li class='tab'>
                   <a href="#contact"><i class="icon-envelope"></i><span> Contact</span></a>
                 </li>
+                <li class='tab'>
+                  <a href="#rigidmotors"><i class="icon-envelope"></i><span> RIGID</span></a>
+                </li>
             </ul>
           <!-- End Tab List -->
             <div id="tab-data-wrap">
@@ -277,7 +280,7 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                                 <img src="http://i.imgur.com/qT3R7ij.png" alt="">
                                 <div class="image-overlay">
                                     <div class="image-link">
-                                        <a href="#rigidmotors" class="btn">Expand</a>
+                                        <a href="" class="btn">Expand</a>
                                     </div>
                                 </div>
                             </div>
@@ -290,7 +293,7 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                     <section class="clearfix">
                         <div class="g2">
                         <h3>
-                                Education
+				Education
                             </h3>
                             <ul class="no-list work">
                                 <li>
@@ -308,125 +311,6 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                                     </p>
                                 </li>
                             </ul>
-                            <h3>
-                                Projects
-                            </h3>
-                            <ul class="no-list work">
-                                <li>
-                                    <h5>
-                                        Rigid Motors
-                                    </h5>
-                                    <p>
-				    Worked with a designer, producer, and artist over four weeks to make an mobile puzzle-platformer in Flash.<br><br>
-This project taught me a lot about thinking about platform. In targeting mobile devices, I worked with the designer to design controls and levels that feel good, and with the artist to get around the graphical limitations of the platform.
-                                   </p>
-                                </li>
-                                <li>
-                                    <h5>
-                                        Apriori Algorithm
-                                    </h5>
-                                    <p>
-				    Worked with two other programmers to develop an implementation of the apriori algorithm for large data sets. Focused on optimizing for time at the cost of memory.<br><br>
-This project taught me an incredibly valuable lesson: always communicate. We were expected to work on the project over spring break, but as soon as I got home my computer died. I was focused on getting it back in working order, and forgot to communicate my dilemma to my teammates. Two days later, I got my computer running and told the team what happened, but the time was still gone. The project got finished; it just took some extra stress and train-programming. From then on I’ve made sure to inform the team I am working with at the first sign of any sizable problem.
-                                    </p>
-                                </li>
-                                <li>
-                                    <h5>
-                                        Batgai-0
-                                    </h5>
-                                    <p>
-				    Worked alone on an arena shoot ‘em up for PC and Xbox 360. Implemented many techniques of 2d graphics programming, including parallax scrolling, a particle system, and pixel shaders in HLSL.<br><br>
-				    This project gave me my first taste of the fun of graphics programming. Though the techniques implemented are very simple, it gave me a taste of the joy of turning math into beauty. There are many facets to creating a great game, but the one which strikes us most immediately and frequently is the visual aesthetic. This project made me realize that graphics programming beautifully combines two of my favorite things: math and art.
-                                    </p>
-                                </li>
-                                <li>
-                                    <h5>
-                                        MOMA Teens One Button Arcade
-                                    </h5>
-                                    <p>
-				    Worked with a team to create an arcade cabinet for a one button game (Gamma IV, by Cactus).<br><br>
-                                    This was the first project that really made me think about controls and presentation when it comes to videogames. We already knew what kind of game we were working with, but we had to create an arcade cabinet that would both mesh well with the existing systems of the game as well as atract people to play. It was a lot of fun getting to create a unique presentation for a game, and showing our work at the Museum of Modern Art, in New York.
-                                    </p>
-                                </li>
-                            </ul>
-                            <h3>
-                                Work
-                            </h3>
-                            <ul class="no-list work">
-                                <li>
-                                    <h5>
-                                        Study-Abroad Blogger
-                                    </h5><span class="label label-success">Jan 2015-April 2015</span>
-                                    <p>
-                                        Writing for Champlain College's study-abroad blog about my time in Montreal, visiting game studios, attempting to learn French, and exploring the city.
-                                    </p>
-                                </li>
-                                <li>
-                                    <h5>
-                                        Programming Tutor
-                                    </h5><span class="label label-info">Sept 2013-April 2014</span>
-                                    <p>
-                                        Tutored students in C++ for the Introduction to Programming, Advanced Programming and Data Structures and Algorithms classes at Champlain College.
-                                    </p>
-                                </li>
-                                <li>
-                                    <h5>
-                                        Hiring Committee Member
-                                    </h5><span class="label label-info">Anually, Spring 2009-2012</span>
-                                    <p>
-                                        Served on the committee which is tasked with making hiring decisions at the Brooklyn Free School. Evaluated resumes, interviewed candidates, and participated in the selection process.
-                                    </p>
-                                </li>
-                                <li>
-                                    <h5>
-                                        Governance  Committee Member
-                                    </h5><span class="label label-info">Sept 2011-June 2012</span>
-                                    <p>
-                                        Served on this newly formed subcommittee of the Board of Trustees, which was charged with reviewing and revising the function of the Board of Trustees and the manner in which the school is governed.
-                                    </p>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="g1">
-                            <div class="sidebar">
-                                <h3>
-                                    Skills
-                                </h3>
-                                <h5>
-                                    Tech
-                                </h5>
-                                <div class="meter emerald">
-                                    <span style="width: 85%"><span>Visual Studio</span></span>
-                                </div>
-                                <div class="meter carrot">
-                                    <span style="width: 66.6%"><span>Unity</span></span>
-                                </div>
-                                <div class="meter wisteria">
-                                    <span style="width: 65%"><span>Git/SVN</span></span>
-                                </div>
-                                <div class="meter sunflower">
-                                    <span style="width: 80%"><span>VIM</span></span>
-                                </div>
-                                <div class="break"></div>
-                                <h5>
-                                    Programming Languages
-                                </h5>
-                                <div class="meter emerald">
-                                    <span style="width: 90%"><span>C/C++</span></span>
-                                </div>
-                                <div class="meter carrot">
-                                    <span style="width: 80%"><span>C#</span></span>
-                                </div>
-                                <div class="meter wisteria">
-                                    <span style="width: 75%"><span>Java</span></span>
-                                </div>
-                                <div class="meter sunflower">
-                                    <span style="width: 80%"><span>Action Script 3</span></span>
-                                </div>
-                                <div class="meter asbestos">
-                                    <span style="width: 60%"><span>HLSL</span></span>
-                                </div>
-                            </div>
                         </div>
                     </section>
                 </div>
