returned link to picture

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                                 <img src="http://i.imgur.com/qT3R7ij.png" alt="">
                                 <div class="image-overlay">
                                     <div class="image-link">
-                                        <a href="" class="btn">Expand</a>
+                                        <a href="#rigidmotors" class="btn">Expand</a>
                                     </div>
                                 </div>
                             </div>
