--- a/index.html
+++ b/index.html
@@ -68,9 +68,7 @@
                 <li class='tab'>
                   <a href="#contact"><i class="icon-envelope"></i><span> Contact</span></a>
                 </li>
-                <li class='tab'>
-                  <a href="#rigidmotors"><i class="icon-envelope"></i><span> RIGID</span></a>
-                </li>
+		<a href="#rigidmotors"></a>
             </ul>
           <!-- End Tab List -->
             <div id="tab-data-wrap">
