--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
                 <li class='tab'>
                   <a href="#contact"><i class="icon-envelope"></i><span> Contact</span></a>
                 </li>
-		<a href="#rigidmotors"></a>
+                <li class='tab'>
+                  <a href="#rigidmotors"><i style="visibility : none;"></i></a>
+                </li>
             </ul>
           <!-- End Tab List -->
             <div id="tab-data-wrap">
