--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                 <li class='tab'>
                   <a href="#contact"><i class="icon-envelope"></i><span> Contact</span></a>
                 </li>
-                <li class='tab'>
-                  <a href="#rigidmotors"><i style="visibility : none;"></i></a>
+                <li class='etabs'>
+                  <a href="#rigidmotors"><i class="icon-envelope"></i><span> Contact</span></a>
                 </li>
             </ul>
           <!-- End Tab List -->
