--- a/index.html
+++ b/index.html
@@ -68,12 +68,15 @@
                 <li class='tab'>
                   <a href="#contact"><i class="icon-envelope"></i><span> Contact</span></a>
                 </li>
-                <li class='etabs'>
-                  <a href="#rigidmotors"><i class="icon-envelope"></i><span> Contact</span></a>
-                </li>
             </ul>
-          <!-- End Tab List -->
-            <div id="tab-data-wrap">
+	<div id="tab-container" class="tab-container" style="visibility: none">
+	  <!-- Tab List -->
+		<li class='etabs'>
+		  <a href="#rigidmotors"><i class="icon-envelope"></i><span> Contact</span></a>
+		</li>
+	    </ul>
+	  <!-- End Tab List -->
+	    <div id="tab-data-wrap">
               <!-- About Tab Data -->
                 <div id="about">
                     <section class="clearfix">
