--- a/index.html
+++ b/index.html
@@ -69,12 +69,13 @@
                   <a href="#contact"><i class="icon-envelope"></i><span> Contact</span></a>
                 </li>
             </ul>
-	<div id="tab-container" class="tab-container" style="visibility: none">
-	  <!-- Tab List -->
-		<li class='etabs'>
+
+	<div id="nothing" style="visibility: none;">
+		<li class='tab'>
 		  <a href="#rigidmotors"><i class="icon-envelope"></i><span> Contact</span></a>
 		</li>
-	    </ul>
+	</div>
+
 	  <!-- End Tab List -->
 	    <div id="tab-data-wrap">
               <!-- About Tab Data -->
