--- a/index.html
+++ b/index.html
@@ -68,14 +68,10 @@
                 <li class='tab'>
                   <a href="#contact"><i class="icon-envelope"></i><span> Contact</span></a>
                 </li>
+                <li class='tab'>
+                  <a href="#rigidmotors"><i class="icon-envelope"></i><span> RigidMotors</span></a>
+                </li>
             </ul>
-
-	<div id="nothing" style="visibility: none;">
-		<li class='tab'>
-		  <a href="#rigidmotors"><i class="icon-envelope"></i><span> Contact</span></a>
-		</li>
-	</div>
-
 	  <!-- End Tab List -->
 	    <div id="tab-data-wrap">
               <!-- About Tab Data -->
