--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
                 <li class='tab'>
                   <a href="#contact"><i class="icon-envelope"></i><span> Contact</span></a>
                 </li>
+                <li class='tab'>
+                  <a href="#rigidmotors"></a>
+                </li>
             </ul>
 	  <!-- End Tab List -->
 	    <div id="tab-data-wrap">
