--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                   <a href="#contact"><i class="icon-envelope"></i><span> Contact</span></a>
                 </li>
                 <li class='tab'>
-                  <b href="#rigidmotors"><i class="icon-envelope"></i><span> Contact</span></b>
+                  <a href="#rigidmotors"><i class="icon-envelope"></i><span> RIGID</span></a>
                 </li>
             </ul>
 	  <!-- End Tab List -->
