--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                   <a href="#contact"><i class="icon-envelope"></i><span> Contact</span></a>
                 </li>
                 <li class='tab'>
-		  <a href="#rigidmotors"><i class="icon-envelope"<b></b></i><span> RIGID</span></a>
+		  <a href="#rigidmotors"><b></b><span> RIGID</span></a>
                 </li>
             </ul>
 	  <!-- End Tab List -->
