--- a/index.html
+++ b/index.html
@@ -52,9 +52,6 @@
             </div>
         </header>
         <!-- Header End -->
-        <div id="nothing" style="display: none;">
-		  <a href="#rigidmotors"></a>
-	</div>
         <!-- Main Tab Container -->
         <div id="tab-container" class="tab-container">
           <!-- Tab List -->
@@ -70,6 +67,9 @@
                 </li>
                 <li class='tab'>
                   <a href="#contact"><i class="icon-envelope"></i><span> Contact</span></a>
+                </li>
+                <li class='tab'>
+                  <a href="#rigidmotors"><span> RigidMotors</span></a>
                 </li>
             </ul>
 	  <!-- End Tab List -->
