--- a/index.html
+++ b/index.html
@@ -52,7 +52,31 @@
             </div>
         </header>
         <!-- Header End -->
-        <!-- Main Tab Container -->
+
+        <!-- Projects Tab Container -->
+        <div id="tab-container" class="tab-container">
+          <!-- Tab List -->
+            <ul class='etabs'>
+                <li class='tab' id="tab-about">
+                  <a href="#about"><i class="icon-user"></i><span> About Me</span></a>
+                </li>
+                <li class='tab'>
+                  <a href="#resume"><i class="icon-file-text"></i><span> Resume</span></a>
+                </li>
+                <li class='tab'>
+                  <a href="#portfolio"><i class="icon-heart"></i><span> Portfolio</span></a>
+                </li>
+                <li class='tab'>
+                  <a href="#contact"><i class="icon-envelope"></i><span> Contact</span></a>
+                </li>
+                <li class='tab'>
+                  <a href="#rigidmotors"><span> RigidMotors</span></a>
+                </li>
+            </ul>
+        </div>
+	  <!-- End Project Tabs -->
+
+	  <!-- Main Tab Container -->
         <div id="tab-container" class="tab-container">
           <!-- Tab List -->
             <ul class='etabs'>
