--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 -                            <div class="main-links sidebar">
 -                                <ul>
 -                                    <li>
--                                        <a href="#rigidmotors">Rigid Motors</a>
+-                                        <a href="#resume">View My Resume</a>
 -                                    </li>
 -                                    <li>
 -                                        <a href="#portfolio">My Portfolio</a>
