--- a/index.html
+++ b/index.html
@@ -291,6 +291,11 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
               <!-- Rigid Motors Page -->
                 <div id="rigidmotors">
                     <section class="clearfix">
+                        <div class="g1">
+                            <div class="image">
+                                <img src="http://i.imgur.com/qT3R7ij.png" alt="">
+                            </div>
+                        </div>
                         <div class="g2">
                         <h3>
 				Education
