--- a/index.html
+++ b/index.html
@@ -296,15 +296,12 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                                 <img src="http://i.imgur.com/qT3R7ij.png" alt="">
                             </div>
                         </div>
-                        <div class="g2">
+                        <div class="g1">
                         <h3>
-				Education
+				Rigid Motors
                             </h3>
                             <ul class="no-list work">
                                 <li>
-                                    <h5>
-                                        Champlain College
-                                    </h5><span class="label label-success">2012-2016</span>
                                     <p>
                                         Currently working towards a <a href="http://www.champlain.edu/academics/undergraduate-academics/majors-and-specializations/game-programming">BS in Game Programming</a>.<br>
                                         Minoring in Mathematics.<br>
