--- a/index.html
+++ b/index.html
@@ -297,9 +297,9 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                             </div>
                         </div>
                         <div class="g3">
-                        <h7>
+                        <h1 text-align="center;">
 				Rigid Motors
-                            </h7>
+                            </h1>
                             <ul class="no-list work">
                                 <li>
                                     <p>
