--- a/index.html
+++ b/index.html
@@ -301,17 +301,11 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
 				Rigid Motors
                             </h1>
 			    <pre>
-Rigid Motors is a mobile puzzle-platformer game made using Flash with the Citrus engine. In Rigid Motors you play as an infinite supply of robot cronies, trying to find treasure in ancient catacombs.
-The catacombs are treacherous, filled with spikes, lava, and all manner of other nasty traps. Fortunately, when one robot dies it leaves its corpse behind to be used as a platform for later cronies.
-The chances of any given robot getting the treasure are small, but together they will prevail.<br><br> This project taught me a lot about thinking about platform.
-In targeting mobile devices, I worked with the designer to design controls and levels that felt good, and with the artist to get around the graphical limitations of the platform. 
+Rigid Motors is a mobile puzzle-platformer game made using Flash with the Citrus engine. In Rigid Motors you play as an infinite supply of robot cronies, trying to find treasure in ancient catacombs. The catacombs are treacherous, filled with spikes, lava, and all manner of other nasty traps. Fortunately, when one robot dies it leaves its corpse behind to be used as a platform for later cronies. The chances of any given robot getting the treasure are small, but together they will prevail.<br><br> This project taught me a lot about thinking about platform. In targeting mobile devices, I worked with the designer to design controls and levels that felt good, and with the artist to get around the graphical limitations of the platform. 
 <h1>
 Controls
 </h1>
-For the controls of Rigid Motors, we wanted to keep it simple. The team all agreed that mobile games work best when they use simple touch controls.
-That being said, we wanted to provide deep platforming gameplay. We decided that the game worked best as a sort of finite-runner.
-We would keep the level format, but we would have the robots constantly run. This let us trim down the control scheme.
-In the final implementation, the controls are simply tap to jump (when the robot is against a wall it does a wall jump and turns around) and swipe to self-destruct. We found that self-destruction was a crucial mechanic in letting the player forge a unique path through each level. 
+For the controls of Rigid Motors, we wanted to keep it simple. The team all agreed that mobile games work best when they use simple touch controls. That being said, we wanted to provide deep platforming gameplay. We decided that the game worked best as a sort of finite-runner. We would keep the level format, but we would have the robots constantly run. This let us trim down the control scheme. In the final implementation, the controls are simply tap to jump (when the robot is against a wall it does a wall jump and turns around) and swipe to self-destruct. We found that self-destruction was a crucial mechanic in letting the player forge a unique path through each level. 
 			    </pre>
                         </div>
                     </section>
