--- a/index.html
+++ b/index.html
@@ -63,13 +63,19 @@
                   <a href="#resume"><i class="icon-file-text"></i><span> Resume</span></a>
                 </li>
                 <li class='tab'>
-                  <a href="#portfolio"><i class="icon-heart"></i><span> Portfolio</span></a>
+                  <a href="#portfolio"><i class="icon-heart"></i><span> Projects</span></a>
                 </li>
                 <li class='tab'>
                   <a href="#contact"><i class="icon-envelope"></i><span> Contact</span></a>
                 </li>
                 <li class='tab' style="display: none;">
                   <a href="#rigidmotors"><i class="icon-heart"></i><span> RigidMotors</span></a>
+                </li>
+                <li class='tab' style="display: none;">
+                  <a href="#infection"><i class="icon-heart"></i><span> Infection</span></a>
+                </li>
+                <li class='tab' style="display: none;">
+                  <a href="#viciousorb"><i class="icon-heart"></i><span> Vicious Orb</span></a>
                 </li>
             </ul>
 	  <!-- End Tab List -->
@@ -280,7 +286,23 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                                 <img src="http://i.imgur.com/qT3R7ij.png" alt="">
                                 <div class="image-overlay">
                                     <div class="image-link">
-                                        <a href="#rigidmotors" class="btn">Expand</a>
+                                        <a href="#rigidmotors" class="btn">Rigid Motors</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="image">
+                                <img src="http://i.imgur.com/zt0h2A8.png" alt="">
+                                <div class="image-overlay">
+                                    <div class="image-link">
+                                        <a href="#infection" class="btn">Infection</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="image">
+                                <img src="http://i.imgur.com/qT3R7ij.png" alt="">
+                                <div class="image-overlay">
+                                    <div class="image-link">
+                                        <a href="#viciousorb" class="btn">Vicious Orb</a>
                                     </div>
                                 </div>
                             </div>
@@ -288,6 +310,7 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                     </section>
                 </div>
               <!-- End Portfolio Data -->
+	      <!-- Project Pages -->
               <!-- Rigid Motors Page -->
                 <div id="rigidmotors">
                     <section class="clearfix">
@@ -310,6 +333,30 @@ For the controls of Rigid Motors, we wanted to keep it simple. The team all agre
                         </div>
                     </section>
                 </div>
+	      <!-- End Rigid Motors Page -->
+              <!-- Infection Page -->
+                <div id="infection">
+                    <section class="clearfix">
+                        <div class="g3">
+                            <div class="image">
+                                <img src="http://i.imgur.com/zt0h2A8.png" alt="">
+                            </div>
+                        </div>
+                        <div class="g4">
+                        <h1>
+				Infection
+                            </h1>
+			    <pre>
+Rigid Motors is a mobile puzzle-platformer game made using Flash with the Citrus engine. In Rigid Motors you play as an infinite supply of robot cronies, trying to find treasure in ancient catacombs. The catacombs are treacherous, filled with spikes, lava, and all manner of other nasty traps. Fortunately, when one robot dies it leaves its corpse behind to be used as a platform for later cronies. The chances of any given robot getting the treasure are small, but together they will prevail.<br><br> This project taught me a lot about thinking about platform. In targeting mobile devices, I worked with the designer to design controls and levels that felt good, and with the artist to get around the graphical limitations of the platform. 
+<h6>
+Controls
+</h6>
+For the controls of Rigid Motors, we wanted to keep it simple. The team all agreed that mobile games work best when they use simple touch controls. That being said, we wanted to provide deep platforming gameplay. We decided that the game worked best as a sort of finite-runner. We would keep the level format, but we would have the robots constantly run. This let us trim down the control scheme. In the final implementation, the controls are simply tap to jump (when the robot is against a wall it does a wall jump and turns around) and swipe to self-destruct. We found that self-destruction was a crucial mechanic in letting the player forge a unique path through each level. 
+			    </pre>
+                        </div>
+                    </section>
+                </div>
+              <!-- End Infection Page -->
               <!-- End Project Pages -->
               <!-- Contact Tab Data -->
                 <div id="contact">
