with rigid motors

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                     <section class="clearfix">
                         <div class="g1">
                             <div class="image">
-                                <img src="http://i.imgur.com/zt0h2A8.png" alt="">
+                                <img src="http://i.imgur.com/qT3R7ij.png" alt="">
                                 <div class="image-overlay">
                                     <div class="image-link">
                                         <a href="#rigidmotors" class="btn">Rigid Motors</a>
