changed big picutre

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                     <section class="clearfix">
                         <div class="g3">
                             <div class="image">
-                                <img src="http://i.imgur.com/qT3R7ij.png" alt="">
+                                <img src="http://i.imgur.com/QUzhwQ8.png" alt="">
                             </div>
                         </div>
                         <div class="g4">
