SCIENCE: Changed pic

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                     <section class="clearfix">
                         <div class="g1">
                             <div class="image">
-                                <img src="http://lorempixel.com/306/306/sports/1" alt="">
+                                <img src=http://i.imgur.com/QUzhwQ8.png"" alt="">
                                 <div class="image-overlay">
                                     <div class="image-link">
                                         <a href="http://lorempixel.com/606/606/sports/1" class="btn">Full View</a>
