--- a/index.html
+++ b/index.html
@@ -293,10 +293,10 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                         </div>
                         <div class="g1">
                             <div class="image">
-                                <img src="http://lorempixel.com/306/306/sports/2" alt="">
+                                <img src="http://i.imgur.com/ik8uzFs.png" alt="">
                                 <div class="image-overlay">
                                     <div class="image-link">
-                                        <a href="http://lorempixel.com/606/606/sports/2" class="btn">Full View</a>
+                                        <a href="#infection" class="btn">Infection</a>
                                     </div>
                                 </div>
                             </div>
