--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                     <section class="clearfix">
                         <div class="g1">
                             <div class="image">
-                                <img src=http://i.imgur.com/QUzhwQ8.png"" alt="">
+                                <img src=http://i.imgur.com/pk8GEx2.png"" alt="">
                                 <div class="image-overlay">
                                     <div class="image-link">
                                         <a href="#rigidmotors" class="btn">Rigid Motors</a>
@@ -293,7 +293,7 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                         </div>
                         <div class="g1">
                             <div class="image">
-                                <img src="http://i.imgur.com/ik8uzFs.png" alt="">
+                                <img src=http://i.imgur.com/hERvFtU.png"" alt="">
                                 <div class="image-overlay">
                                     <div class="image-link">
                                         <a href="#infection" class="btn">Infection</a>
