--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                 </div>
               <!-- End Resume Tab Data -->
               <!-- Portfolio Tab Data -->
-                <div id="portfolio" text-align="center;">
+                <div id="portfolio">
                     <section class="clearfix">
                         <div class="g5">
                             <div class="image">
